--- a/views/urls.ejs
+++ b/views/urls.ejs
@@ -90,7 +90,7 @@
               <td>
                 <%= url.originalUrl %>
               </td>
-              <td>https://bysa.ma/<%= url.shortUrl %>
+              <td>http://bysa.ma/<%= url.shortUrl %>
               </td>
               <td>
                 <%= url.filename %>
