--- a/views/home.ejs
+++ b/views/home.ejs
@@ -61,7 +61,7 @@
               <td>
                 <%= url.originalUrl %>
               </td>
-              <td>http://bysa.ma/<%= url.shortUrl %>
+              <td>https://bysa.ma/<%= url.shortUrl %>
               </td>
               <td>
                 <% const base64QrCode=url.qrCode.toString('base64'); %>
