--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,15 +22,19 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item <%= active === 'home' ? 'active' : '' %>">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item <%= active === 'urls' ? 'active' : '' %>">
-          <a class="nav-link" href="/urls">URLs</a>
-        </li>
-      </ul>
-    </div>
+  <ul class="navbar-nav">
+    <li class="nav-item <%= active === 'home' ? 'active' : '' %>">
+      <a class="nav-link" href="/">Home</a>
+    </li>
+    <li class="nav-item <%= active === 'urls' ? 'active' : '' %>">
+      <a class="nav-link" href="/urls">URLs</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/logout">Logout</a>
+    </li>
+  </ul>
+</div>
+
   </nav>
   <div class="container">
     <div class="d-flex justify-content-between mb-3">
