--- a/views/notfound.ejs
+++ b/views/notfound.ejs
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+  <meta property="og:title" content="Pico - Fast, Scalable URL Shortener & QR Code Generator" />
+  <meta property="og:description" content="Experience blazing speed and scalability with Pico,
+   the leading URL shortener and QR code application. Ideal for businesses of all sizes, Pico 
+   provides quick, reliable, and secure link shortening and QR code 
+  generation for streamlined sharing and tracking. Transform your online presence with Pico today!" />
+  <meta property="og:image" content="/.well-known/acme-challenge/assets/section-1.png">
+  <meta property="og:url" content="https://bysa.ma" />
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 Not Found</title>
